--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "node index.js",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "start": "node ./build/app.bundle.js"
   },
   "author": "",
   "license": "ISC",
