Add movie service

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=""
-PORT=
+MONGODB_URL="mongodb+srv://dvidareact:bC6gDLpDaKvHuhS@cluster0.to42y.mongodb.net/dev34-movie-service?retryWrites=true&w=majority"
+PORT=3001
