--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": "node index.js",
+    "serve": "nodemon index.js",
     "build": "webpack --mode production --progress",
     "start": "node ./build/app.bundle.js"
   },
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.16.4",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.0.0",
+    "nodemon": "^2.0.16",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   },
